# eventlens-ah

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2072f2c809cc_add_asset_name_and_symbol.py  e7c53e71cfc8_initial_schema.py
backend/app/: main.py
backend/app/api/: assets.py  dashboard.py  deps.py  documents.py  events.py  ingestion.py  router.py
backend/app/core/: config.py  database.py  logging.py  redis.py
backend/app/db/: seed.py  session.py
backend/app/ingestion/: __init__.py  pipeline.py  sources.py
backend/app/llm/: __init__.py  base.py  deepseek_provider.py  factory.py  gemma4_provider.py  mock_provider.py  openai_compatible_provider.py  qwen_provider.py
backend/app/models/: __init__.py  asset.py  event_asset_link.py  event_price_reaction.py  llm_run_log.py  market_event.py  raw_document.py  research_hypothesis.py
backend/app/schemas/: __init__.py  asset.py  common.py  dashboard.py  event_asset_link.py  event_price_reaction.py  ingestion.py  llm_outputs.py  llm_run_log.py  market_event.py  raw_document.py  research_hypothesis.py
backend/app/scoring/: __init__.py  scorer.py
backend/app/services/: __init__.py  asset_service.py  dashboard_service.py  document_service.py  event_service.py  hypothesis_service.py
backend/app/workers/: __init__.py  (+2 more)
backend/tests/: conftest.py  test_api.py  test_llm_mock.py  test_llm_run_log.py  test_pipeline.py  test_schemas.py  test_scoring.py  test_scoring_discrimination.py
(+43 files in other folders)
